BUG#37522 (Backup: stream_v1_transport: Error condition should be checked for as_* calls)

This patch adds checks for errors in stream_v1_transport.c where the low level I/O 
functions are called.